@@ -1,3 +1,6 @@
+2007-06-26 David Barnett <daviebdawg@gmail.com>
+  * [gpasm] Added message when assuming first CBLOCK address
+
 2007-06-25 David Barnett <daviebdawg@gmail.com>
   * [gpasm] Added support for pageselw directive
   * [gpasm] Added test cases for pageselw directive in gpasm.project directory
